# zotcv

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/zotcv/: __about__.py  __init__.py
src/zotcv/scripts/: update_cv.py
templates/: cv.html  cv.md  template.md
tests/: __init__.py
