[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zotcv"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "John-Ragland", email = "jhrag@uw.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/John-Ragland/zotcv#readme"
Issues = "https://github.com/John-Ragland/zotcv/issues"
Source = "https://github.com/John-Ragland/zotcv"

[project.scripts]
update_cv = "zotcv.scripts.update_cv:main"
init_zotcv = "zotcv.scripts.update_cv:init_zotcv"
[tool.hatch.version]
path = "src/zotcv/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/zotcv tests}"

[tool.coverage.run]
source_pkgs = ["zotcv", "tests"]
branch = true
parallel = true
omit = [
  "src/zotcv/__about__.py",
]

[tool.coverage.paths]
zotcv = ["src/zotcv", "*/zotcv/src/zotcv"]
tests = ["tests", "*/zotcv/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
